- Fixed locked origins being usable through the Random origin
- Slayer is now a 3 star origin now that the Ash forest exists
- Added the Confused and the Chef origins
- Added Trailblazer's Helmet