@@ -1,18 +1,4 @@
-{
 Splash: {
-	// 0: Now with more space!
-	// 1: By the people who brought you Overseer!
-	// 2: Not to be confused with MrPlague's Authentic Races!
-	// 3: 15% less sodium, 15% less sugar, 100% better characters!
-	// 4: Contains a dangerous amount of awful code!
-	// 5: Has never had and never will have any bugs!
-	// 6: Purist is only for people who want to look at the mod, not play it!
-	// 7: Surprisingly popular in Antarctica!
-	// 8: Sponsored by Team Spirit!
-	// 9: Contains a significant lack of shaders!
-	// 10: Confirmed drama-free by researchers!
-	// 11: Tremor? I hardly know her!
-
 	0: 现在有更多空间了!
 	1: 来自那些为你带来监管者的人!
 	2: 别和 MrPlague's Authentic Races 混为一谈了!
@@ -28,11 +14,7 @@ Splash: {
 }
 
 SortBy: {
-	// Line: Sort by {0}
-	// Default: default
-	// Difficulty: difficulty
 	Line: "{0}排序"
 	Default: 默认
 	Difficulty: 难度
-}
 }
